Unfix navbar to prevent dropdown clipping

--- a/pft/static/sitestyle.css
+++ b/pft/static/sitestyle.css
@@ -42,9 +42,9 @@
     background-color: #ffffff;
 }
 /* Workaround for fixed to top navbar */
-body {
+/*body {
     padding-top: 50px;
-}
+}*/
 /* Remove padding for plots */
 .nopadding {
    padding: 0 !important;
